--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -1337,7 +1337,7 @@
     "# Use the graph style fivethirtyeight.\n",
     "style.use('fivethirtyeight')\n",
     "fig, ax = plt.subplots(figsize=(15,6))\n",
-    "total_fare_type_week.plot(kind=\"line\", ax=ax, color=[\"lightcoral\", \"lightskyblue\", \"gold\"])\n",
+    "total_fare_type_week.plot(kind=\"line\", ax=ax, color=[\"lightcoral\", \"light\", \"gold\"])\n",
     "ax.set_title(\"Total Fare by City Type\")\n",
     "ax.set_ylabel(\"Fare ($USD)\")\n",
     "ax.set_xlabel(\"\")\n",
